added flaky test tracking in .yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ language: java
 jdk:
   - oraclejdk7
 install: true
-script: ./complete_build
+script: ./complete_buildbefore_install:
+  - wget https://dl.dropboxusercontent.com/u/7897865/apache-maven-3.3.9.zip
+  - unzip -qq apache-maven-3.3.9.zip
+  - export M2_HOME=$PWD/apache-maven-3.3.9
+  - export PATH=$M2_HOME/bin:$PATH
